# aws_mkdocs

./: LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/orig/: Dockerfile_full  devcontainer.json
M2/demo-app/: app.py  setup.py
M2/demo-app/cdk.out/: demo-app.assets.json  demo-app.template.json  manifest.json  tree.json
M2/demo-app/demo_app/: demo_app_stack.py
M3/parameter-store/: app.py
M3/parameter-store/parameter_store/: parameter_store_stack.py
M3/vpc-lookup/: app.py  cdk.context.json  cdk.json
M3/vpc-lookup/cdk.out/: manifest.json  tree.json  vpc-lookup.assets.json  vpc-lookup.template.json
M3/vpc-lookup/vpc_lookup/: vpc_lookup_stack.py
docs/: explanation.md  index.md  reference.md  start_c4viz_server.sh
docs/c4/: dsl2plantuml.sh  orig_project.dsl  project.dsl
docs/c4/diagrams/: structurizr-SoftwareSystem-Development-Deployment.puml
docs/diagrams/src/: structurizr-SoftwareSystem-Container.puml  structurizr-SoftwareSystem-Live-Deployment.puml  structurizr-SoftwareSystem-SystemContext.puml  structurizr-SoftwareSystem-WebApplication-Component.puml  structurizr-SystemLandscape.puml
